src/objects/FieldExperience__c.object
<CustomObject>
    <description>This object represents the field experiences application. Students have access to the this object in the customer portal. There are multiple record types including PCE/DT, BSHI, MSSP, etc.</description>
    <fields>
        <fullName>AbsencesActionRequired__c</fullName>
        <label>Absences: Action Required</label>
        <picklist>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend 1 Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend 2 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend 1 More Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete 1st extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrack 1st week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete 2nd extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrack 2nd week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend 3 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete 3rd extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrack 3rd week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When a student beings a second field experience, such as in needing to reapply for DT when PCE is complete, there can be multiple FE objects per student. This field identifies the active object. Upon a new application, the current active object is archived for historical review and reason fields used to document the change.</description>
        <inlineHelpText>Check to set this Field Experience as the active application/process</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdmissionStatusDate__c</fullName>
        <description>The Date the admission status changed/updated.</description>
        <inlineHelpText>The Date the admission status changed/updated.</inlineHelpText>
        <label>Admission Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AdmissionStatus__c</fullName>
        <description>Admission Status of application</description>
        <inlineHelpText>Current admission status of student in related DT cohort.</inlineHelpText>
        <label>Admission Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Provisional Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admission Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AdvPrgmLog__c</fullName>
        <description>Field for details on the advanced program.</description>
        <label>Adv Prgm Log</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCIClearedbyLicensure__c</fullName>
        <description>licensure has reviewed and cleared BCI for current DT cohort.</description>
        <label>BCI Cleared by Licensure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckCleared__c</fullName>
        <description>The clearance status of a background clearance.</description>
        <label>Background Check Cleared</label>
        <picklist>
            <picklistValues>
                <fullName>1-Yes, Cleared for DT or Practicum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Yes, Cleared for DT, but not Licensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Yes, Cleared for PCE, but not DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-No, Incomplete Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-No, BCI Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-No, Not Cleared</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckLastReviewed__c</fullName>
        <description>The date when a teacher license user edited one of the background check fields on the Field Experience object.</description>
        <label>Background Check Last Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BackgroundCheckState__c</fullName>
        <description>The state the student has a cleared background check.</description>
        <label>Background Check State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BackgroundClearanceExpirationDate__c</fullName>
        <description>The date this BCI (background clearance info) expires.</description>
        <label>Background Clearance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BackgroundClearanceNeededEmail__c</fullName>
        <description>Sends email reminder to student to send WGU Licensure their background clearance.</description>
        <inlineHelpText>Changing this date field will send reminder email to student to send background clearance to licensure.</inlineHelpText>
        <label>Background Clearance Needed Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BackgroundClearedforDT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Student&apos;s background clearance has been verified and is valid throughout this cohort.</description>
        <inlineHelpText>Background Clearance approved for this DT cohort if checked.</inlineHelpText>
        <label>Background Cleared for DT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BackgroundClearedforPCE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Background Cleared For PCE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerDCLNonPCE__c</fullName>
        <label>Banner DCL Non PCE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BasicSkillsPassed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has student passed (BSE) basic skills exam/s?  Checked= Yes</description>
        <label>Basic Skills Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BasicSkillsRevision__c</fullName>
        <description>Date email sent to student to request basic skills exam scores to be sent to Scores department.</description>
        <label>Basic Skills Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMApplicationID__c</fullName>
        <description>This is the Application ID field carried over from the CRM system. This is an external ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>The application ID number from the CRM.</inlineHelpText>
        <label>CRM Application ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMCohort__c</fullName>
        <label>CRM Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>12-Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Eligible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMMentorEmail__c</fullName>
        <label>CRM Mentor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRMName__c</fullName>
        <label>CRM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMPrimarySpecialist__c</fullName>
        <label>CRM Primary Specialist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMSecondarySpecialist__c</fullName>
        <label>CRM Secondary Specialist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMStudentEmail__c</fullName>
        <label>CRM Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CategoryOfStudent__c</fullName>
        <description>Category of student to facilitate cohort seminar arrangements.</description>
        <label>Category of Student</label>
        <picklist>
            <picklistValues>
                <fullName>CalTPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>edTPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>edTPA - WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MoPTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CheckMentorPIDM__c</fullName>
        <formula>IF (  Mentor__r.PIDM__c  = $User.PIDM__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckMentorPIDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildreninDistrict__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this student have children in the district where he/she is requesting DT? Checked=Yes</description>
        <inlineHelpText>Children in DT District?</inlineHelpText>
        <label>Children in District</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClassroomExperience__c</fullName>
        <description>How much experience does the student have in the classroom?</description>
        <label>Classroom  Experience</label>
        <picklist>
            <picklistValues>
                <fullName>No classroom experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only pre clinical experience (PCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 or more years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClinicalSupervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person observing the student during DT.</description>
        <label>Clinical Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Field Experiences (Clinical Supervisor)</relationshipLabel>
        <relationshipName>FEClinicalSupervisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodeofEthicsAcknowledgment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Student has acknowledged that they have read the code of ethics. check=yes</description>
        <label>Code of Ethics Acknowledgment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CohortProgramCode__c</fullName>
        <description>Student&apos;s program code</description>
        <label>Cohort Program Code</label>
        <picklist>
            <picklistValues>
                <fullName>BAECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAISK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAISPK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAMA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAMA9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASC9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCB12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCCH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCG12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASCPH12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASS12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASSPX12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATELK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATELP8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATMA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATMA9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATSC12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATSC9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATSS12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBELK8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBELP8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBMA12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBMA9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBSC12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBSC9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBSS12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CohortProgramTitle__c</fullName>
        <description>Name of the program</description>
        <label>Cohort Program Title</label>
        <picklist>
            <picklistValues>
                <fullName>BA Early Childhood Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Interdisciplinary Stud K-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Interdisc Studies (PK-8)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Mathematics 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Mathematics 5-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science 5-12, Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science 5-12, Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science 5-12, Geoscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science 5-12, Physics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Science 5-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Social Science 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAT Elementary K-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAT Elementary PK-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAT Mathematics 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAT Mathematics 5-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAT Science 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAT Science 5-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAT Social Science 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-bacc Tch Prep SocSci 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-bacc teach Prep Elem K-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-bacc teach Prep Math 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-bacc teach Prep Math 5-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-bacc teach Prep PK-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-bacc teach Prep Sci 5-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-bacc teach Prep Sci 5-9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Field Experiences</relationshipLabel>
        <relationshipName>FieldExperiences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContentExam1Registered__c</fullName>
        <description>DT requirments review - has student uploaded correct content exam 1 registration ticket</description>
        <inlineHelpText>Content exam 1 registration ticket uploaded and verified?</inlineHelpText>
        <label>Content Exam 1 Registered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContentExam2Registered__c</fullName>
        <description>DT requirments review - has student uploaded correct content exam 2 registration ticket</description>
        <inlineHelpText>Content exam 2 registration ticket uploaded and verified?</inlineHelpText>
        <label>Content Exam 2 Registered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContentExam3Registered__c</fullName>
        <description>DT requirments review - has student uploaded correct content exam 3 registration ticket</description>
        <inlineHelpText>Content exam 3 registration ticket uploaded and verified?</inlineHelpText>
        <label>Content Exam 3 Registered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContentExamExceptionReason__c</fullName>
        <description>Reason for exception for content exam, provisional exception only.</description>
        <label>Content Exam Exception Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentExamUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a hidden checkbox used to manage the student-facing tasks.</description>
        <inlineHelpText>Upload of content exam Registration tickets.</inlineHelpText>
        <label>Content Exam Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentExamsPassed__c</fullName>
        <description>Passed state and WGU required exams per student per program passed.</description>
        <label>Content Exams Passed</label>
        <picklist>
            <picklistValues>
                <fullName>Content Exam 1 Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Exam 2 Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Exam 3 Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Exam 4 Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Exam 5 Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Exam 6 Passed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ContentExamsRevision__c</fullName>
        <description>Date emails was sent to student to request a revision for their content exam upload.</description>
        <label>Content Exams Revision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DODStudent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this student military or military spouse.  Will student be doing DT on DOD, Dept. of Defense base etc.?</description>
        <inlineHelpText>Student has self identified as a DoD student.</inlineHelpText>
        <label>DOD Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTAffidavit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DTAffidavit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTApplicationFeesCharged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether or not the DT Application fees have been charged.</description>
        <label>DT Application Fees Charged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTCallCompletedDate__c</fullName>
        <description>Date DT Intro call was completed with student.</description>
        <inlineHelpText>Date DT Intro call was completed with student.</inlineHelpText>
        <label>DT Call Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTCohortFeesCharged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether or not the DT Cohort fees have been charged.</description>
        <label>DT Cohort Fees Charged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTCohortMonth__c</fullName>
        <formula>TEXT(Cohort__r.CohortMonth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DT Cohort Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTCohortTimelineUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a hidden checkbox used to manage the student-facing tasks.</description>
        <label>DT Cohort Timeline Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTCohortYear__c</fullName>
        <formula>TEXT(Cohort__r.CohortYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DT Cohort Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTPhaseStatus__c</fullName>
        <description>Status of the DT Phase of application</description>
        <inlineHelpText>Status of DT application items.  Does not include academic requirements for Admission Status.</inlineHelpText>
        <label>DT Phase Status</label>
        <picklist>
            <picklistValues>
                <fullName>DT Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Phase Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DTPlacementEndDate__c</fullName>
        <description>Last day of DT.</description>
        <label>DT Placement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTPlacementStartDate__c</fullName>
        <description>Date the student starts DT.</description>
        <label>DT Placement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTRecommendStatus__c</fullName>
        <description>This field gives the status for the DT recommendation. The mentor&apos;s list of field experiences will use this field to provide a list of field experiences that require their approval.</description>
        <label>DTRecommendStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Not Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>